--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.3.0",
     "react-modal": "^3.15.1",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
